# meme-manager

./: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: app_builder.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  db.rs  main.rs  meme.rs
src/components/: AddMemeButton.jsx  Card.jsx  MemeCard.jsx  MemeForm.jsx  Rating.jsx  SearchBox.jsx  VideoPlayer.jsx
src/layouts/: About.jsx  DeleteDialog.jsx  GridView.jsx  ListView.jsx  MemeFormModal.jsx  Navbar.jsx  Pagination.jsx
src/store/: useDeleteStore.js  useMemeFormStore.js  useMemesStore.js  usePreferenceStore.js  useThemeStore.js
